# Partial-Correspondence-3D-NNF

./: .gitignore  DDIS_sparse_correspondences.m  README.md  create_geo_matrices.m  runSHREC16A.m  runSHREC16B.m  run_FAUST_test.m  visualize_dense_matches.m  visualize_matches_sparse.m  visualize_sparse_matches.m
FSPM/: README.md
Faust_Sampling/: run.bat  sampleandclean.mlx  scale.mlx
Results/: cuts_dense.rar  (+7 more)
nnf_sparse_code/: 3DDIS_OMP.cpp  CMakeLists.txt  cloud_analysis_visl.cpp  cloud_features_visl.cpp  cloud_features_visl.tpp  cloud_io_visl.cpp  cloud_key_points_visl.cpp  cloud_nnf_multi_visl_omp.cpp  cloud_registration.cpp  cloud_registration_visl.cpp  cloud_rops_visl.cpp  cloud_surface_visl.cpp  cloud_visualization_visl.cpp  fastmarch.cpp  fastmarchutils.cpp  meshgraph.cpp  misc_utils.cpp  pcl_fast_marching.cpp  proj_namespaces.cpp  y_stand.cpp
nnf_sparse_code/geodesic/: geodesic_pcl_api.h
nnf_sparse_code/geodesic/fastmarch/: fastmarch.h  y_stand.h
nnf_sparse_code/include/: IoU.hpp  QuickSort.hpp  cloud_analysis_visl.hpp  cloud_features_visl.hpp  cloud_io_visl.hpp  cloud_key_points_visl.hpp  cloud_nnf_multi_visl.hpp  cloud_nnf_multi_visl_omp.hpp  cloud_nnf_template_visl_omp.hpp  cloud_nnf_visl.hpp  cloud_registeration.hpp  cloud_registration_visl.hpp  cloud_rops_visl.h  cloud_surface_visl.hpp  cloud_visualization_visl.hpp  colormaps.hpp  customfeatures.h  gfpfh.h  gpfh.h  hks.h  meshgraph.h  misc_utils.hpp  nnf_five.h  pcl_fast_marching.h  proj_namespaces.hpp  sfpfh.h
nnf_sparse_code/include/impl/: cloud_rops_visl.hpp  gfpfh.hpp  gpfh.hpp  sfpfh.hpp
(+39 files in other folders)
